--- a/RestaurantApp/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/RestaurantApp/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -11,12 +11,12 @@
 <div class="row">
   <div class="col-12">
     <div class="btn-group">
-      <button class="btn btn-danger dropdown-toggle" data-toggle = "dropdown">
+      <button class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
         Manage Recipe
       </button>
       <div class="dropdown-menu">
-        <a style="cursor: pointer" class="dropdown-item" (click)= "onAddToShoppingList()">To shopping list</a>
-        <a style="cursor: pointer" class="dropdown-item">Edit Recipe</a>
+        <a style="cursor: pointer" class="dropdown-item" (click)="onAddToShoppingList()">To shopping list</a>
+        <a style="cursor: pointer" class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a>
         <a style="cursor: pointer" class="dropdown-item">Delete Recipe</a>
         <a href="" class="dropdown-item"></a>
       </div>
@@ -31,9 +31,8 @@
 <div class="row">
   <div class="col-12">
     <ul class="list-group">
-      <li class="list-group-item"
-      *ngFor ="let ingredient of recipe.ingredients">
-      {{ingredient.name}} ({{ingredient.amount}})
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} ({{ingredient.amount}})
       </li>
     </ul>
   </div>
