--- a/RestaurantApp/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/RestaurantApp/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-success">
+        <button class="btn btn-success"  (click) = "onNewRecipe()">
             New Recipe
         </button>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <app-recipes-items *ngFor="let recipeEle of recipes" [recipe]="recipeEle">
+            <app-recipes-items *ngFor="let recipeEle of recipes; let i = index" [recipe]="recipeEle" [index] = "i">
 
             </app-recipes-items>
         </div> 
