--- a/RestaurantApp/src/app/recipes/recipes-edit/recipes-edit.component.html
+++ b/RestaurantApp/src/app/recipes/recipes-edit/recipes-edit.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="col-11">
+  <div class="col-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-12">
             <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
-            <button class="btn btn-danger" type="button">Cancel</button> 
+            <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button> 
         </div>
       </div>
       <div class="row">
@@ -19,8 +19,13 @@
         <div class="col-12">
           <div class="form-group">
             <label for="imagePath">Image URL:</label>
-            <input type="text" class="form-control" id="imagePath" formControlName="imagePath">
+            <input type="text" class="form-control" id="imagePath" formControlName="imagePath" #imagePath>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img [src]="imagePath.value" alt="" class="img-fluid">
         </div>
       </div>
       <div class="row">
@@ -42,13 +47,13 @@
               <input type="text" class="form-control " formControlName="amount">
             </div>
             <div class="col-2">
-              <button class="btn btn-danger">x</button>
+              <button class="btn btn-danger" type="button" (click)="odDeleteIngredient(i)">x</button>
             </div>
           </div>
           <hr>
           <div class="row">
             <div class="col-12">
-              <button class="btn btn-success" (click)="onAddIngredient()">Add ingredient</button>
+              <button type ="button" class="btn btn-success" (click)="onAddIngredient()">Add ingredient</button>
             </div>
           </div>
         </div>
