--- a/RestaurantApp/src/app/header/header.component.html
+++ b/RestaurantApp/src/app/header/header.component.html
@@ -16,6 +16,8 @@
         <a  class="dropdown-item">Fetch Data</a>
       </div>
     </li>
+    <li class="nav-item"><a class="nav-link" *ngIf="!authService.isUserLoggedIn()" routerLink ="/login">Login</a></li>
+    <li class="nav-item"><a class="nav-link" *ngIf="authService.isUserLoggedIn()" routerLink ="/recipes" (click)="onLoguot()">Logout</a></li>
     </ul>
   </div>
 </nav>
